<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/margin_16dp"
    android:background="@drawable/backgound_top_corner_bottom_sheet_dialog"
    app:layout_behavior="com.goggle.android.material.BottomSheet">

        <TextView
            android:id="@+id/tvTitttleForgot"
            style="@style/textview_tittle_item_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txt_forgotpassword_tittle"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvContentForgot"
            style="@style/textview_sub_tittle_universal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/txt_forgotpassword_description"
            app:layout_constraintEnd_toEndOf="@+id/tvTitttleForgot"
            app:layout_constraintStart_toStartOf="@+id/tvTitttleForgot"
            app:layout_constraintTop_toBottomOf="@+id/tvTitttleForgot" />

        <Button
            android:id="@+id/btnYesForgot"
            style="@style/button_background_red_wrap_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_oke_button"
            app:layout_constraintEnd_toEndOf="@+id/tvContentForgot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvContentForgot" />


</androidx.constraintlayout.widget.ConstraintLayout>