<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingBottom="25dp"
    android:background="@drawable/background_rounded_top_white_padding"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTittleInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        style="@style/textview_tittle_item_profile"
        android:textSize="@dimen/text_subtittle"
        android:text="@string/txt_formulir_tidak_ada_jaringan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/textview_sub_tittle_universal"
        android:text="@string/txt_formulir_coba_periksa_kembali_koneksi_internet_anda"
        app:layout_constraintEnd_toEndOf="@+id/tvTittleInfo"
        app:layout_constraintStart_toStartOf="@+id/tvTittleInfo"
        app:layout_constraintTop_toBottomOf="@+id/tvTittleInfo" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/illustration_container_tidak_ada_jaringan" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/button_background_red"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_coba_lagi_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView22" />
</androidx.constraintlayout.widget.ConstraintLayout>