<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/margin_16dp"
    android:background="@drawable/backgound_top_corner_bottom_sheet_dialog"
    app:layout_behavior="com.goggle.android.material.BottomSheet">

        <TextView
            android:id="@+id/tvDialogTittle"
            style="@style/textview_tittle_item_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            tools:text="@string/txt_keluar"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDialogMessage"
            style="@style/textview_sub_tittle_universal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="@string/txt_logout_message"
            app:layout_constraintEnd_toEndOf="@+id/tvDialogTittle"
            app:layout_constraintStart_toStartOf="@+id/tvDialogTittle"
            app:layout_constraintTop_toBottomOf="@+id/tvDialogTittle" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/btnDialogNo"
            style="@style/button_outline_border_red"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="@string/txt_btn_batal"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="@+id/tvDialogMessage"
            app:layout_constraintTop_toBottomOf="@+id/tvDialogMessage" />

        <Button
            android:id="@+id/btnDialogYes"
            style="@style/button_background_red_wrap_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/tvDialogMessage"
            app:layout_constraintStart_toStartOf="@+id/guideline10"
            app:layout_constraintTop_toBottomOf="@+id/tvDialogMessage"
            tools:text="@string/txt_keluar" />


</androidx.constraintlayout.widget.ConstraintLayout>